--- a/main.css
+++ b/main.css
@@ -127,6 +127,13 @@ a:link {
   text-align: center;
 }
 
+.button {
+  background-color: white;
+  border-radius: 20px;
+  width: 175px;
+  margin: auto;
+}
+
 .video1 {
   display: flex;
   flex-direction: column;
@@ -144,4 +151,8 @@ a:link {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.button a {
+  color: #b26829;
 }
